# python-quant

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.trae/rules/: project_rules.md
plugins/: baostock_datasource.py  indicator_visualization.py  kdj_indicator.py  kline_visualization.py  ma_indicator.py  macd_indicator.py  macro_datasource.py  news_datasource.py  rsi_indicator.py  tdx_datasource.py  vol_ma_indicator.py
src/: main.py
src/api/: api_version.py  business_api.py  data_api.py  dto.py  presentation_api.py
src/business/: rules_engine.py
src/data/: adj_factor_calculator.py  adj_factor_utils.py  adj_price_query.py  akshare_handler.py  async_data_manager.py  baostock_handler.py  data_cache.py  data_manager.py  data_source_health.py  datasource_factory.py  macro_handler.py  news_handler.py  tdx_adj_calculator.py  tdx_handler.py
src/database/: db_manager.py
src/docs/: event_driven_architecture.md
src/plugin/: plugin_base.py  plugin_manager.py  plugin_registry.py
src/plugins/: __init__.py
src/recommendation/: stock_recommender.py
src/tech_analysis/: __init__.py  common_calculations.py  gpu_acceleration.py  incremental_calculator.py  indicator_cache.py  indicator_calculator.py  indicator_manager.py  indicator_registry.py  streaming_processor.py  technical_analyzer.py  utils.py
src/ui/: action_manager.py  async_processing.py  chart_items.py  chart_manager.py  data_view_manager.py  dividend_marker.py  indicator_interaction_manager.py  indicator_labels.py  main_window.py  main_window_data_mixin.py  main_window_drawing_mixin.py  main_window_event_mixin.py  main_window_ui_mixin.py  stock_search_dialog.py  table_interaction_manager.py  task_manager.py  theme_manager.py  ui_manager.py  window_event_manager.py
src/utils/: architecture_validator.py  cache_monitor.py  communication_monitor.py  config.py  event_bus.py  (+12 more)
tools/: calibrate_tdx_accuracy.py  generate_config_docs.py  recalculate_adj_factor.py  recalculate_adj_factor_batch.py  update_calibrate_stock_dividend.py
(+93 files in other folders)
